fixed uneven social images

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -287,7 +287,7 @@ hr {
 }
 
 .social-image {
-    max-height: 120px;
+    height: 120px;
     width: auto;
     margin-top: 10px;
     margin-bottom: 10px;
